kubernetes/killer/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroutetls

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`killer.jubla-nz.ch`)
      kind: Rule
      services:
        - name: killer-frontend
          port: 80
    - match: Host(`api.killer.jubla-nz.ch`)
      kind: Rule
      services:
        - name: killer-backend
          port: 80
  tls:
    certResolver: myresolver
